# Parallel-graph-coloring

./: .gitignore  Makefile  README.md
.metadata/: version.ini
.metadata/.plugins/org.eclipse.core.resources/: 0.snap
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2018/5/21/: refactorings.history  refactorings.index
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.asus_0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.asus_0/FP.local.files_0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.asus_0/FP.org.eclipse.ptp.remote.rse.core._0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.asus_0/H.local_16/: node.properties
data/: Gen_graf.py  getdata.sh  odwracanie.py  opt_5.col  opt_54.col  test.col
docs/: bibliografia.bib  sprawozdanie.tex
include/: template_cpu.h
src/: Makefile  parallel.cu  sequential.cpp  template _zmiana.cu  template.cu  template_cpu.cpp  wyniki.txt
src/graph_coloring/: coloring_cpu.cpp
src_sekw/: CMakeCache.txt  CMakeLists.txt  Main  Main2  Makefile  cmake_install.cmake  main.cpp  main_moze_lepsze.cpp  template_cpu.h
